<resources>
    <string name="app_name">MyCRM</string>
    <string name="app_mycrm_shared_key">MyCRM_shared</string>
    <string name="app_mycrm_shared_intro">MyCRM_intro</string>
    <string name="app_mycrm_shared_intro_shown">Shown</string>
    <string name="app_mycrm_shared_intro_default">Not Shown</string>
    <string name="app_mycrm_notification_token">MyCRM_notification_token</string>
    <string name="empty_string">""</string>
    <string name="error">Ошибка</string>

    <!-- Login activity -->
    <string name="hint_login">Телефон</string>
    <string name="hint_password">Пароль</string>
    <string name="action_create_new_account">Создать новый аккаунт</string>
    <string name="action_login">Войти</string>
    <string name="action_forgot_password">Забыли пароль?</string>
    <string name="error_empty_string">Пожалуйста, заполните все поля</string>
    <string name="error_timeout">Не удалось установить соединение с сервером. Пожалуйста, попробуйте позже</string>
    <string name="error_invalid_login">Пожалуйста, введите валидный номер</string>
    <string name="agree">Хорошо</string>
    <string name="hint_authorize">Чтобы пользоваться приложением, авторизуйтесь</string>
    <string name="hint_forgot">Введите номер телефона, мы отправим код подтверждения и вы сможете создать новый пароль</string>
    <string name="hint_approved">Ваш номер подтвержден. Придумайте и запомните новый пароль</string>
    <string name="action_send">Отправить</string>
    <string name="action_approve">Подтвердить</string>
    <string name="hint_resend_code">Отправить код повторно</string>
    <string name="hint_layout_password_code">Код подтверждения</string>
    <string name="hint_layout_login_enter_new_password">Введите новый пароль</string>
    <string name="hint_layout_password_reenter_new_password">Повторите пароль</string>
    <string name="action_save_and_login">Сохранить и войти</string>
    <string name="error_no_internet_connection">Нет подключения к сети</string>

    <!--Main activity-->
    <!--Bottom navigation bar-->
    <string name="navigation_bar_calendar">cal</string>
    <string name="navigation_bar_client">user</string>
    <string name="navigation_bar_notification">not</string>
    <string name="navigation_bar_menu">Меню</string>
    <!--Division fragment-->
    <string name="division_title">Выбор филиала</string>
    <string name="try_again">Повторить</string>
    <!--Notification fragment-->
    <string name="notification_title">Уведомления</string>
    <string name="current_notification">ТЕКУЩИЕ</string>
    <string name="past_notification">ПРОШЕДШИЕ</string>
    <string name="go_to_map">Перейти к карте</string>
    <!--Info activity-->
    <string name="services">УСЛУГИ</string>
    <string name="client">КЛИЕНТ</string>
    <string name="note">ЗАМЕТКА</string>
    <string name="file">Файлы</string>
    <string name="docs">Документы</string>
    <string name="action_add_new_service">Добавить услугу</string>
    <string name="warn_choose_service">Пожалуйста, выберите как минимум одну услугу</string>
    <!--Journal fragment-->
    <string name="event_count">Количество записей</string>

    <!-- Intro -->
    <string name="intro1_title">Онлайн система управления клиникой или стоматологией</string>
    <string name="intro1_desc">Работаем везде, где есть интернет. Поможем структурировать и хранить информацию о клиентах, сотрудниках и компании.</string>
    <string name="intro2_title">Предупредим врача о предстоящей записи </string>
    <string name="intro2_desc">Удобные уведомления напомнят врачу о предстоящих записях или о том, что нужно заполнить карточку клиента</string>
    <string name="intro3_title">Осталось только авторизоваться</string>
    <string name="intro3_desc">Чтобы начать работать с приложением, авторизуйтесь, используя ваш логин и пароль</string>

    <string name="dialog_ok">ОК</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_later">Не сейчас</string>
    <string name="warn_new_app_version">Появилась новая версия приложения. Пожалуйста, обновите</string>

</resources>
