<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_logo2"
        app:layout_constraintVertical_bias=".15"
        app:layout_constraintStart_toStartOf="@id/loginLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/loginLayout"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginLayout"
        android:layout_width="@dimen/login_editText_width"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        app:errorEnabled="true"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toBottomOf="parent">

        <kz.mycrm.android.ui.view.LoginEditTextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login"
            android:maxLength="16"
            android:text="+7 7"
            android:textSize="@dimen/login_text_input_size"
            android:background="@drawable/login_edit_background"
            android:inputType="phone"
            android:textIsSelectable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="@dimen/login_editText_width"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        app:errorEnabled="true"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textSize="@dimen/login_text_input_size"
            android:background="@drawable/login_edit_background"
            android:inputType="textPassword"
            android:textIsSelectable="false" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_forgot_password"
        android:textSize="@dimen/login_text_action_size"
        android:layout_marginBottom="@dimen/login_hint_margin_bottom"
        android:textColor="@color/login_textColor"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintTop_toTopOf="@id/passwordLayout"
        app:layout_constraintBottom_toBottomOf="@id/passwordLayout"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="40dp"
        android:background="@drawable/login_button_background"
        android:text="@string/action_login"
        app:layout_constraintVertical_bias="0.1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/login_text_input_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.15"
        android:text="@string/action_create_new_account"
        android:textColor="@color/login_textColor"
        android:textSize="@dimen/login_text_action_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>